@@ -1,3 +1,14 @@
+2007-10-25  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Maciej Stachowiak.
+        
+        Tweaked the inner hashtable lookup loop to remove a branch in the "not 
+        found" case. .5% speedup on SunSpider.
+
+        * JavaScriptCore.xcodeproj/project.pbxproj:
+        * wtf/HashTable.h:
+        (WTF::::lookup):
+
 2007-10-25  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Oliver.
